# agent_build_hackathon

./: .gitignore  LICENSE  README.md  agent.py  pyproject.toml
agentkit/: llm.py
docs/: MODEL_SELECTION.md
evals/: evals.json
fixtures/: sample_inputs.json
frontend/: app.py
lease-analyzer/: agent.py  pyproject.toml
lease-analyzer/agentkit/: loop.py
lease-analyzer/docs/: ADLC.md
lease-analyzer/evals/files/: sample_lease.txt
lease-analyzer/skills/clause_risk/: SKILL.md
lease-analyzer/skills/exit_risk/: SKILL.md
lease-analyzer/skills/financial_risk/: SKILL.md
lease-analyzer/skills/negotiation_playbook/: SKILL.md
leases/: README.md
prompts/: CLAUDE_CODE_PROMPT_v1.md
scripts/: validate_skills.py
skills/clause_risk/: SKILL.md
skills/clause_risk/scripts/: clause_checks.py
skills/exit_risk/: SKILL.md
skills/exit_risk/scripts/: exit_checks.py
skills/financial_risk/: SKILL.md
skills/financial_risk/scripts/: financial_checks.py
skills/negotiation_playbook/: SKILL.md
skills/negotiation_playbook/assets/: negotiation_template.md
