[project]
name = "lease-analyzer"
version = "0.1.0"
description = "Commercial lease analyzer agent — TOA Agent Build Day 2026"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.1.3",
    "ollama>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentkit", "skills"]
